kustomize/base/service.yaml
# base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp
spec:
  selector:
    app: simple-webapp
  ports:
    - port: 80
      targetPort: 8080
